--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <li class="list-inline-item"><i class="fa-solid fa-file-excel"></i></li>
                         <li class="list-inline-item"><i class="fa-solid fa-terminal"></i></li>
                     </ul>
-                    <div class="subheading mb-3">Technical Skils</div>
+                    <div class="subheading mb-3">Technical Skills</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
